fixed navbar spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,7 +46,6 @@ h1 img {
 nav {
     display: flex;
     height: 50px;
-    width: 600px;
     align-items: center;
     justify-content: space-around;
     padding: var(--header-padding);
@@ -57,6 +56,8 @@ nav a {
     font-size: 2vw;
     font-weight: bold;
     color: var(--blue);
+    margin: 10px;
+    text-decoration: underline;
 }
 
 .page {
